# sudoku

./: .gitignore  bruteforce  bruteforce.c  bruteforce.h  init.ipynb  setup.py  sudoku.ipynb  sudoku.py  wrap_bruteforce.c
bruteforce.dSYM/Contents/: Info.plist
bruteforce.dSYM/Contents/Resources/DWARF/: bruteforce
data/: easy.txt  evil_1.txt  evil_2.txt  evil_3.txt  hard.csv  hard.txt  hard2.txt  mn1.csv  mn1.txt  q2_02.csv  q2_02.txt  q2_03.csv  q2_03.txt  q2_04.csv  q2_04.txt  q2_05.csv  q2_05.txt  q2_06.csv  q2_06.txt  q2_07.csv  q2_07.txt  q2_08.csv  q2_08.txt  q2_09.csv  q2_09.txt  q2_10.txt  q2_11.txt  q2_12.txt  q2_13.txt  q2_51.csv  q2_51.txt  q2_52.csv  q2_52.txt  w01.csv  w01.txt
lib/: bitmap.py  coloring.py  dfstyle.py  log.py  matrix.py  repr.py
src/: CMakeLists.txt  bitmap.c  bitmap.h  bruteforce.c  bruteforce.h  matrix.c  matrix.h  wrap_bruteforce.c
